# recmetrics

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-demo  LICENSE  Makefile  README.md  example.ipynb  example_2.ipynb  movielens_example_for_medium.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
recmetrics/: __init__.py  metrics.py  plots.py
recommender_metrics/: metrics.py  plots.py
src/: metrics.py  plots.py
tests/: test_metrics.py  test_plots.py
