[tool.poetry]
name = "recmetrics"
version = "0.1.0"
description = "A library of metrics for evaluating recommender systems"
authors = ["Claire Longo <longoclaire@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
funcsigs = "^1.0.2"
ipython = "^7.18.1"
matplotlib = "^3.3.2"
pandas = "^1.1.3"
plotly = "^4.11.0"
pytest-cov = "^2.10.1"
scikit-learn = "^0.23.2"
scikit-surprise = "^1.1.1"
scipy = "^1.5.2"
seaborn = "^0.11.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
