[tool.poetry]
name = "recmetrics"
version = "0.1.6"
description = "A library of metrics for evaluating recommender systems"
authors = ["Claire Longo <longoclaire@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
funcsigs = "^1.0.2"
matplotlib = "^3.3.2"
numpy = "^1.23"
pandas = "^1.1.3"
plotly = "^4.11.0"
scikit-learn = "^1"
scipy = "^1.5.2"
seaborn = "^0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "^7.18.1"
pytest-cov = ">2"
twine = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
